# particle-scanner

./: .gitignore  README.md  controls.md  new_features_list.md  options.md
dotnet/: .editorconfig  ParticleScanner.sln
dotnet/CustomControls/: ActiveSymbolButton.cs  BooleanIndicator.cs  CustomControls.csproj  ImageButton.cs  LabeledContentControl.cs  SimpleStackPanel.cs  StateImageButton.cs  SymbolButton.cs  SymbolControlBase.cs  SymbolLabel.cs  ToggleImageButton.cs  ToggleImageDescriptionButton.cs  ToggleSymbolButton.cs  VerticalImageButton.cs  packages.config
dotnet/ImageProcessing/: ImageProcessing.csproj  packages.config
parts/: CameraObjectiveHolder.stl  LightingHolder.stl  ParticleScanner.f3d
python/: camera.py  camera_viewer.py  controller.py  focus_stack.py  main.py  scanner.py  setup.py  stage.py
python/Sashimi/: pyproject.toml
python/Sashimi/sashimi/: camera.py  cli.py  configuration.py  controller.py  helicon_stack.py  keyboard.py  main.py  nodeFile.pfs  scanner.py  scanner_old.py  segmentation.py  stage.py  stitch.py  util.py  utils.py
python/Sashimi/sashimi/configuration/: base.py  configuration.py
python/Sashimi/sashimi/gui/: controller.py  main.py
python/Sashimi/sashimi/hardware/: camera.py  scanner.py  stage.py
python/Sashimi/sashimi/old/: controller.py
python/Sashimi/sashimi/stacking/: focus_stack.py  helicon_stack.py
python/Sashimi/sashimi/stitching/: ashlar.py  montage.py  stitch.py
python/Sashimi/scripts/: del_useless_pics.py  get_cam_settings.py  restack.py
python/Sashimi/test/: test UI.py  test_helicon_stack.py
(+125 files in other folders)
