[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name='sashimi'
version='2.0.0'
description='3D printer stacking software'
requires-python=">=3.10"
authors=[{name='Ross Marchant', email='ross.g.marchant@gmail.com'},
         {name='Louis Lanoy', email='louis.lanoy@icloud.com'}]
dependencies=[
        'scikit-image',
        'numpy',
        'scipy',
        'pypylon',
        'opencv-python',
        'pyserial',
        'click',
        'pillow',
        'PySide6'
    ]